# SDQP

./: CMakeLists.txt  README.md
example/: sdqp_example.cpp  tictoc.hpp
include/sdqp/: iosqp.hpp  sdqp.hpp
